--- a/index.html
+++ b/index.html
@@ -61,14 +61,7 @@
             <div class="model">
                <div class="header">
                   <span class="logo"></span> 
-                  <h2 class="title">
-███████╗    ██████╗     ████████╗    ██╗  ██╗</br>
-██╔════╝    ██╔══██╗    ╚══██╔══╝    ╚██╗██╔╝</br>
-███████╗    ██████╔╝       ██║        ╚███╔╝</br> 
-╚════██║    ██╔══██╗       ██║        ██╔██╗</br> 
-███████║    ██████╔╝       ██║       ██╔╝ ██╗</br>
-╚══════╝    ╚═════╝        ╚═╝       ╚═╝  ╚═╝</br>
-                                             </h2>
+                  <h2 class="title">s b t x</h2>
                </div>
                <div class="links"> <a href="loading_socials.html" alt="https://sbtx.tk/socials">socials</a> <a href="loading_radio.html" alt="https://sbtx.tk/radio">radio</a> <a href="loading_discord" alt="https://discord.com/users/559296371056836608">discord</a></div>
                <div class="disclaimer1"> made with <i class="icon ion-heart" style="color: #e25555;"></i>by sbtx#0001</div>
