--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                   <span class="logo"></span> 
                   <h2 class="title">s b t x</h2>
                </div>
-               <div class="links"> <a href="loading_socials.html" alt="https://sbtx.tk/socials">socials</a> <a href="loading_radio.html" alt="https://sbtx.tk/radio">radio</a> <a href="loading_discord" alt="https://discord.com/users/559296371056836608">discord</a></div>
-               <div class="disclaimer1"> made with <i class="icon ion-heart" style="color: #e25555;"></i>by sbtx#0001</div>
+               <div class="links"> <a href="socials.html" alt="https://sbtx.tk/socials">socials</a> <a href="donate.html" alt="https://streamlabs.com/sebastionixx1">radio</a> <a href="discord.html" alt="https://discord.com/users/559296371056836608">discord</a></div>
+               <div class="disclaimer1"> made with <i class="icon ion-heart" style="color: #e25555;"></i>by sbtx#0001</div>https://streamlabs.com/sebastionixx1
                <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
             </div>
          </div>
