Update and rename loading_radio.html to donate.html

--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>sbtx's site</title>
+      <title>sbtx's donate</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sarala&amp;display=swap">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
