--- a/donate.html
+++ b/donate.html
@@ -47,6 +47,6 @@
                 alert("📸")
             }, false);
         </script>  
-        <meta http-equiv="Refresh" content="1; url='https://sbtx.tk/radio'" />
+        <meta http-equiv="Refresh" content="1; url='https://streamlabs.com/sebastionixx1'" />
    </body>
 </html>
