--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      </style>
 
      <div id="content1">
-      <p><a href="source.html">
+      <p><a href="shop.html">
       <img src="img/aklsjhaosfnaosjf.png" alt="https://sbtx.tk/shop" width="65" height="65">
    </a></p>
    </div>
