--- a/index.html
+++ b/index.html
@@ -88,7 +88,27 @@
              e.preventDefault();
              alert("📸")
          }, false);
-     </script>        
+     </script>
+      <script>  
+      document.onkeypress = function (event) {  
+      event = (event || window.event);  
+      if (event.keyCode == 123) {  
+      return false;  
+      }  
+      }  
+      document.onmousedown = function (event) {  
+      event = (event || window.event);  
+      if (event.keyCode == 123) {  
+      return false;  
+      }  
+      }  
+      document.onkeydown = function (event) {  
+      event = (event || window.event);  
+      if (event.keyCode == 123) {  
+      return false;  
+      }  
+      }  
+      </script>  
    </body>
 </html>
 .
